project-manifests/base/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: the-project-dep
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: the-project
  template:
    metadata:
      labels:
        app: the-project
    spec:
      containers:
        - name: the-project
          image: the-project-image
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: the-project-svc
spec:
  type: ClusterIP
  selector:
    app: the-project
  ports:
    - port: 8080
      targetPort: 8080
