project-manifests/base/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-postgres-svc
spec:
  type: ClusterIP
  selector:
    app: project-postgres
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: project-postgres-ss
spec:
  serviceName: project-postgres-svc
  replicas: 1
  selector:
    matchLabels:
      app: project-postgres
  template:
    metadata:
      labels:
        app: project-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
              name: postgres
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: postgres-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 256Mi
