project-manifests/base/ingress-and-cronjob.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: the-project-ingress
spec:
  rules:
  - http:
      paths:
      - path: /todos
        pathType: Prefix
        backend:
          service:
            name: todo-backend-svc
            port:
              number: 5000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: the-project-svc
            port:
              number: 8080
